# qed

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  mise.toml
.claude/: CLAUDE.md  TODO.md  settings.json
.claude/tests/: error-handling-edge-cases.md  error-handling.md  external-processors-edge-cases.md  external-processors.md  generation-edge-cases.md  generation.md  harness.md  invocation-edge-cases.md  invocation.md  patterns-edge-cases.md  patterns.md  processors-edge-cases.md  processors.md  script-files-edge-cases.md  script-files.md  selectors-edge-cases.md  selectors.md  stream-control.md  usecases.md
.github/workflows/: ci.yml  release.yml
assets/: logo-design.md  logo-gen.py
docs/: cli-reference.md  high-level-design.md  language-reference.md  qed-comparison.md  qed-design.md  qed-dev-workflow.md  qed-examples.md  qed-implementation-design.md  qed-project-structure.md  qed-roadmap.md  qed-rust-conventions.md
docs/arrows/: cli.md  index.yaml  (+7 more)
qed/: Cargo.toml
qed-core/: Cargo.toml
qed-core/src/: error.rs  lib.rs  span.rs
qed-core/src/compile/: env.rs  mod.rs
qed-core/src/exec/: engine.rs  fragment.rs  mod.rs
qed-core/src/parse/: ast.rs  error.rs  mod.rs
qed-core/src/parse/rd/: cursor.rs  mod.rs  parser.rs
qed-core/src/processor/: chain.rs  dedent.rs  delete.rs  duplicate.rs  external.rs  file.rs  indent.rs  lower.rs  mod.rs  number.rs  prefix.rs  random.rs  replace.rs  skip.rs  substring.rs  suffix.rs  timestamp.rs  trim.rs  upper.rs  uuid.rs  wrap.rs
qed-tests/: Cargo.toml
qed/src/: diff.rs  main.rs
tasks/: todo.md
(+375 files in other folders)
