[package]
name = "qed-core"
version = "0.3.1"
edition = "2024"
description = "Core library for the qed stream editor"
license = "MIT"
repository = "https://github.com/boldlygodev/qed"

[dependencies]
regex = "1"
rayon = "1"
rand = "0.10"
uuid = { version = "1", features = ["v4", "v5", "v7"] }
chrono = "0.4"
chrono-tz = "0.10"
tempfile = "3.27"
