[package]
name = "qed"
version = "0.3.1"
edition = "2024"
description = "A modern stream editor for source files and config files"
license = "MIT"
repository = "https://github.com/boldlygodev/qed"

[[bin]]
name = "qed"
path = "src/main.rs"

[dependencies]
qed-core = { path = "../qed-core" }
clap = { version = "4", features = ["derive"] }
similar = "2.7"
