[package]
name = "qed"
version = "0.5.0"
edition = "2024"
description = "A modern stream editor for source files and config files"
license = "MIT"
repository = "https://github.com/boldlygodev/qed"

[[bin]]
name = "qed"
path = "src/main.rs"

[dependencies]
qed-core = { path = "../qed-core" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
similar = "2.7"
